Trailhead2022/force-app/main/default/objects/Show__c/Show__c.object-meta.xml
<CustomObject>
    <label>Show</label>
    <nameField>
        <label>Show Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>