Trailhead2022/force-app/main/default/objects/Show__c/fields/All_Syndications__c.field-meta.xml
<CustomField>
    <fullName>All_Syndications__c</fullName>
    <label>All Syndications</label>
    <summaryForeignKey>Syndication__c.Show__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>