Trailhead2022/force-app/main/default/objects/Show__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Vlog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>