Trailhead2022/force-app/main/default/objects/Show__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shows</relationshipLabel>
    <relationshipName>Shows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>