Trailhead2022/force-app/main/default/objects/Show__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Host__c</columns>
    <columns>Format__c</columns>
    <columns>Active_Syndications__c</columns>
    <columns>All_Syndications__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>